force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_QTD_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Current_QTD_Actuals__c</fullName>
    <description>Sum of total billable hours and internal hours till today in current Quarter.</description>
    <formula>QTD_Total_Billable_Hours__c + QTD_Total_Internal_hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of total billable hours and internal hours till today in current Quarter.</inlineHelpText>
    <label>Current QTD Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>