force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Quarter_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Capacity__c</fullName>
    <description>Total of Resource&apos;s available hours in current Quarter.</description>
    <inlineHelpText>Total of Resource&apos;s available hours in current Quarter.</inlineHelpText>
    <label>Current Quarter Capacity</label>
    <summarizedField>FPSA_Resource_Availability__c.FPSA_Available_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>FPSA_Resource_Availability__c.Current_Quarter__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FPSA_Resource_Availability__c.FPSA_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>