force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Quarter_Planned_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Planned_Billable_Hours__c</fullName>
    <description>Total Planned Hrs from Resource time for resource for current Quarter where Allocation.billable = true</description>
    <inlineHelpText>Total Planned Hrs from Resource time for resource for current Quarter where Allocation.billable = true</inlineHelpText>
    <label>Current Quarter Planned Billable Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>