force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Quarter_Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Planned_Cost__c</fullName>
    <description>Total Planned Cost from Resource time for resource for current Quarter</description>
    <inlineHelpText>Total Planned Cost from Resource time for resource for current Quarter</inlineHelpText>
    <label>Current Quarter Planned Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>