force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Quarter_Resource_Margin__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Resource_Margin__c</fullName>
    <description>Difference b/w Current Quarter Planned Billable Revenue and Current Quarter planned Cost</description>
    <formula>Current_Quarter_Planned_Billable_Revenue__c -  Current_Quarter_Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference b/w Current Quarter Planned Billable Revenue and Current Quarter planned Cost</inlineHelpText>
    <label>Current Quarter Resource Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>