force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Year_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Capacity__c</fullName>
    <description>Total Availability of resource for current year</description>
    <inlineHelpText>Total Availability of resource for current year</inlineHelpText>
    <label>Current Year Capacity</label>
    <summarizedField>FPSA_Resource_Availability__c.FPSA_Available_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>FPSA_Resource_Availability__c.Current_Year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FPSA_Resource_Availability__c.FPSA_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>