force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Year_Planned_Billable_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Planned_Billable_Revenue__c</fullName>
    <description>Total Planned Revenue from Resource Timeline for resource for current year</description>
    <inlineHelpText>Total Planned Revenue from Resource Timeline for resource for current year</inlineHelpText>
    <label>Current Year Planned Billable Revenue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>