force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_Year_Resource_Margin__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Resource_Margin__c</fullName>
    <description>Difference of Current Year Planned Billable Revenue and Current year planned Cost</description>
    <formula>Current_Year_Planned_Billable_Revenue__c -  Current_Year_Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference of Current Year Planned Billable Revenue and Current year planned Cost</inlineHelpText>
    <label>Current Year Resource Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>