force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Current_YTD_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Actuals__c</fullName>
    <description>Sum of billable hours and internal hours till today in the current year.</description>
    <formula>YTD_Total_Billable_Hours__c +  YTD_Total_Internal_hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of billable hours and internal hours till today in the current year.</inlineHelpText>
    <label>Current YTD Actuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>