force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Field used to define resource department</description>
    <inlineHelpText>Select the department the resource is primarily allocated too</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Pre-sales</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>IT and Operations</fullName>
            </value>
            <value>
                <fullName>India Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>