force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Allow_Project_Allocation__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Allow_Project_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to make sure only project managers are allowed to create project allocations.  For e.g. Consultants cannot save allocations.</description>
    <label>Allow Project Allocation</label>
    <type>Checkbox</type>
</CustomField>