force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Cost_Rate__c</fullName>
    <label>Cost Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>