force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Current_quarter_capacity__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Current_quarter_capacity__c</fullName>
    <description>Duplicate field.</description>
    <label>PD Current Quarter Capacity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>