force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Default_billing_rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Default_billing_rate__c</fullName>
    <label>Default Billing Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>