force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Default_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Default_Cost_Rate__c</fullName>
    <label>Default Cost Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>