force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Job_level__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Job_level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>