force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Last_working_date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Last_working_date__c</fullName>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>