force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Lock_Resource_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lock_Resource_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lock the Start Date if timeentry has submitted.</description>
    <label>FPSA Lock Resource Start Date</label>
    <type>Checkbox</type>
</CustomField>