force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Paylocity_ID__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Paylocity_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External ID for Paylocity.</inlineHelpText>
    <label>Paylocity ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>