force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Paylocity_Vacation_Balance__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Paylocity_Vacation_Balance__c</fullName>
    <label>Paylocity Vacation Balance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>