force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Practice__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Practice__c</fullName>
    <label>Practice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>