force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_QTD_utilization__c.field-meta.xml
<CustomField>
    <fullName>FPSA_QTD_utilization__c</fullName>
    <description>Duplicate field.</description>
    <label>PD QTD utilization</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>