force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Ramp_months__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Ramp_months__c</fullName>
    <label>Ramp Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>