force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Region__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>