force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Relax_Min_Hours_Cap__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Relax_Min_Hours_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relax Min. Hours Cap</label>
    <type>Checkbox</type>
</CustomField>