force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_Email__c</fullName>
    <formula>IF(MPM4_BASE__User__c != null , MPM4_BASE__User__r.Email ,  MPM4_BASE__Contact__r.Email )</formula>
    <inlineHelpText>This email address is used on TimeLine to send Timesheet submission notification</inlineHelpText>
    <label>Resource Email</label>
    <type>Text</type>
</CustomField>