force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Resource_External_Id__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_External_Id__c</fullName>
    <displayFormat>RES-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Resource External Id</label>
    <type>AutoNumber</type>
</CustomField>