force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Resource_status__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>