force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_Type__c</fullName>
    <label>Resource Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>