force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Start_date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Start_date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>