force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Title__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Title__c</fullName>
    <label>Title</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>President and COO</fullName>
            </value>
            <value>
                <fullName>VP Customer Success</fullName>
            </value>
            <value>
                <fullName>Director Sales</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Associate</fullName>
            </value>
            <value>
                <fullName>Chief Architect</fullName>
            </value>
            <value>
                <fullName>Principal  Consultant</fullName>
                <label>Principal Consultant</label>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Contactor - Senior</fullName>
            </value>
            <value>
                <fullName>Contractor - Staff</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>