force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/FPSA_Utilization_Taget__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Utilization_Taget__c</fullName>
    <label>Utilization Target</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>