force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Inactive_User__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Inactive_User__c</fullName>
    <formula>IF(AND(MPM4_BASE__User__c != null, !MPM4_BASE__User__r.IsActive), true, false)</formula>
    <inlineHelpText>If the resource is a contact or an active user this will be unchecked.</inlineHelpText>
    <label>Related User Is Inactive</label>
    <type>Checkbox</type>
</CustomField>