force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Resource_Teams__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Teams__c</fullName>
    <label>Resource Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPM4_BASE__Resource_Teams</valueSetName>
    </valueSet>
</CustomField>