force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Resource_Workday_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Workday_Duration__c</fullName>
    <defaultValue>8</defaultValue>
    <inlineHelpText>The amount of hours the resource works each day. Defaults to 8 if left blank.</inlineHelpText>
    <label>Workday Duration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>