force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/MPM4_BASE__Resource_Workweek_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Workweek_Duration__c</fullName>
    <defaultValue>40</defaultValue>
    <inlineHelpText>The amount of hours the resource works each week. Defaults to 40 if left blank.</inlineHelpText>
    <label>Workweek Duration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>