force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Paylocity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Paylocity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is enriched from the data that comes from Paylocity.</inlineHelpText>
    <label>Paylocity Manager</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Reportee&apos;s</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>