force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/QTD_Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>QTD_Billable_Utilization__c</fullName>
    <description>Ratio of QTD Total Billable Hours and QTD Total Available hours</description>
    <formula>(QTD_Total_Billable_Hours__c /   QTD_Total_Available_Hours__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ratio of QTD Total Billable Hours and QTD Total Available hours</inlineHelpText>
    <label>QTD Billable Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>