force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/QTD_Total_Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>QTD_Total_Available_Hours__c</fullName>
    <description>Sum of available hours from Resource Availability for each Resource till today in current quarter.</description>
    <inlineHelpText>Sum of available hours from Resource Availability for each Resource till today in current quarter.</inlineHelpText>
    <label>QTD Total Available Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>