force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/QTD_Total_Internal_hours__c.field-meta.xml
<CustomField>
    <fullName>QTD_Total_Internal_hours__c</fullName>
    <description>Total Hrs from Resource Timeline for current Quarter where status = Approved and Project.billable = False</description>
    <inlineHelpText>Total Hrs from Resource Timeline for current Quarter where status = Approved and Project.billable = False</inlineHelpText>
    <label>QTD Total Internal hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>