force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/QTD_Utilization__c.field-meta.xml
<CustomField>
    <fullName>QTD_Utilization__c</fullName>
    <description>Ratio of total current quarter actual hours and total available hours.</description>
    <formula>((QTD_Total_Billable_Hours__c +  QTD_Total_Internal_hours__c) /  QTD_Total_Available_Hours__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ratio of total current quarter actual hours and total available hours.</inlineHelpText>
    <label>QTD Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>