force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/Weekly_Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Available_Hours__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Available hours every week</description>
    <inlineHelpText>Available hours every week</inlineHelpText>
    <label>Weekly Available Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>