force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/YTD_Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>YTD_Billable_Utilization__c</fullName>
    <description>Ratio of YTD Total Billable Hours and YTD Total Available hours</description>
    <formula>(YTD_Total_Billable_Hours__c/ YTD_Total_Available_Hours__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ratio of YTD Total Billable Hours and YTD Total Available hours</inlineHelpText>
    <label>YTD Billable Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>