force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/YTD_Total_Available_Hours__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Available_Hours__c</fullName>
    <description>Total of available hours for current year till today.</description>
    <inlineHelpText>Total of available hours for current year</inlineHelpText>
    <label>YTD Total Available Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>