force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/fields/YTD_Total_Internal_hours__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Internal_hours__c</fullName>
    <description>Total Hrs from Resource Timeline for current year where status = Approved and Project.billable = false</description>
    <inlineHelpText>Total Hrs from Resource Timeline for current year where status = Approved and Project.billable = false</inlineHelpText>
    <label>YTD Total Internal hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>