force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/validationRules/FPSA_Lock_Resource_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FPSA_Lock_Resource_Start_Date</fullName>
    <active>true</active>
    <description>Once Time Entry is submitted, Start Date cannot be changed.</description>
    <errorConditionFormula>AND(
ISCHANGED(FPSA_Start_date__c) ,
FPSA_Lock_Resource_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>FPSA_Start_date__c</errorDisplayField>
    <errorMessage>Once TimeEntry is submitted, Start Date cannot be changed.</errorMessage>
</ValidationRule>