force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/validationRules/MPM4_BASE__Must_enter_contact_or_user.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Must_enter_contact_or_user</fullName>
    <active>false</active>
    <description>User must enter either a contact or user before saving the the resource.</description>
    <errorConditionFormula>OR(AND(MPM4_BASE__Contact__c = null, MPM4_BASE__User__c = null), AND(MPM4_BASE__Contact__c != null, MPM4_BASE__User__c != null))</errorConditionFormula>
    <errorMessage>You must enter either a contact or user before saving the the resource.</errorMessage>
</ValidationRule>