force-app/main/default/objects/MPM4_BASE__Milestone1_Resource__c/validationRules/MPM4_BASE__WorkdayDurationMustBePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__WorkdayDurationMustBePositive</fullName>
    <active>true</active>
    <description>If not blank, workday duration must be greater than zero.</description>
    <errorConditionFormula>OR(MPM4_BASE__Resource_Workday_Duration__c = 0, MPM4_BASE__Resource_Workday_Duration__c &lt; 0)</errorConditionFormula>
    <errorMessage>Workday duration must be greater than 0.</errorMessage>
</ValidationRule>